# dae-lua-pacman

./: CMakeLists.txt  Game.aps  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameWinMain.cpp  GameWinMain.h  LuaBinder.h  annotations.lua
resources/: ghosts.tmx  ghosts_special.tmx  pacman.tmx  tiles_map.tmx
scripts/: ghost.lua  main.lua  map.lua  pacman.lua  pellet.lua  redGhost.lua
